--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,3 +127,57 @@ input::placeholder {
     color: #aaa;
 }
   
+
+
+#myBtn{outline: none;}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: #56a5eb; /* Fallback color */
+    background-color: #56a6eb62; /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #ecf5ff;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #56a5eb;
+    width: 60%; /* Could be more or less, depending on screen size */
+
+    animation-name: animatetop;
+    animation-duration: 0.6s
+  }
+  /* Add Animation */
+    @keyframes animatetop {
+    from {top: -300px; opacity: 0}
+    to {top: 0; opacity: 1}
+  }
+  /* The Close Button */
+  .close {
+    color:  #56a5eb;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #3e79ac;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  @media only screen and (max-width: 450px) {
+    .modal-content {
+        width: 85%;
+    }
+  }
